# acid-chess

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  app.py  pyproject.toml
acid/: __init__.py  app.py  board.py  conf.py  contextmanagers.py  decorators.py  engines.py  game.py  geometry.py
acid/gui/: app.ui  logs.py  main.py  main_window.py  settings.py  state.py  threads.py
acid/gui/online/: lichess.py
acid/gui/qt/: reactive.py  settings.py  widgets.py
acid/gui/res/: icons.py  icons.qrc
acid/torch/: lightning_modules.py  logging.py  models.py  setup.py
acid/utils/: cv2.py  timezone.py
data/etc/: deploy_linux_ml_traning_vm.sh
data/models/: board_segmentation_mask.ckpt  square_classifier.ckpt
data/training/: del_image_data.sh
data/training/boards/: attribution.csv  google_dl_status.csv
docs/: changelog.md  conf.py  index.md  index.rst  installation.md  requirements.txt
docs/_static/logo/: logo.pxd
docs/dev/: neural_networks.md  neural_networks.rst
notebooks/: board_google_images_dl.ipynb  board_segemenation_testing.ipynb  board_segemenation_training.ipynb  board_segmentation_testing.ipynb  board_segmentation_training.ipynb  notebook_setup.py  square_classification_testing.ipynb  square_classification_training.ipynb  square_classifier_testing.ipynb  square_classifier_training.ipynb
src/acid/: board.py  conf.py  geometry.py
src/acid/gui/: app.ui  gui.pyproject  main.py  settings.py  state.py
src/acid/torch/: data.py  setup.py
(+94 files in other folders)
